SIP2-300: Always use root locale for currency values