@@ -7,27 +7,26 @@ import java.time.OffsetDateTime;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
-import java.util.Collections;
-import java.util.HashMap;
+import java.util.EnumSet;
 import java.util.Map;
+import java.util.Objects;
+import java.util.function.BiConsumer;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
+import org.folio.edge.sip2.domain.messages.enumerations.Language;
+import org.folio.edge.sip2.domain.messages.enumerations.PatronStatus;
+import org.folio.edge.sip2.parser.LanguageMapper;
 
 @RequiredArgsConstructor
 public abstract class Sip2ResponseParser<T> {
 
   protected static final DateTimeFormatter DATE_TIME_FORMATTER = ofPattern("yyyyMMdd    HHmmss");
-  private static final Map<Character, Boolean> BOOLEAN_VALUES;
-
-  static {
-    Map<Character, Boolean> map = new HashMap<>();
-    map.put('Y', true);
-    map.put('1', true);
-    map.put('N', false);
-    map.put('0', false);
-    map.put('U', null);
-    BOOLEAN_VALUES = Collections.unmodifiableMap(map);
-  }
+  protected static final Map<Character, Boolean> BOOLEAN_VALUES = Map.ofEntries(
+      Map.entry('Y', true),
+      Map.entry('1', true),
+      Map.entry('N', false),
+      Map.entry('0', false)
+  );
 
   protected int position;
   protected final char delimiter;
@@ -36,10 +35,50 @@ public abstract class Sip2ResponseParser<T> {
   /**
    * Parses a SIP2 response message string into a JSON-like object structure.
    *
-   * @param responseMessage the raw SIP2 response message string to parse
+   * @param responseMessage - the response message from `edge-sip2`
    * @return the parsed response as a Map-based structure
    */
-  public abstract T parse(String responseMessage);
+  public T parse(String responseMessage) {
+    if (responseMessage == null || responseMessage.length() < 2) {
+      throw new IllegalArgumentException("Invalid response message");
+    }
+
+    position = 0;
+    var messageChars = responseMessage.toCharArray();
+    var statusCode = parseString(messageChars, 2);
+    var expectedStatusCode = Integer.toString(getCommandCode());
+    if (!Objects.equals(expectedStatusCode, statusCode)) {
+      throw new IllegalArgumentException(
+          "Invalid message type: expected %s, got: %s".formatted(expectedStatusCode, statusCode));
+    }
+    return parseBody(messageChars);
+  }
+
+  /**
+   * Parses a SIP2 response message string into a JSON-like object structure.
+   *
+   * @param messageChars the raw SIP2 response message characters to parse
+   * @return the parsed response as a Map-based structure
+   */
+  protected abstract T parseBody(char[] messageChars);
+
+  /**
+   * Returns a command code expected to be in response.
+   *
+   * @return the command code as int
+   */
+  public abstract int getCommandCode();
+
+  protected void parseVariableLengthFields(char[] chars, BiConsumer<String, String> handler) {
+    while (position < chars.length && chars[position] != delimiter) {
+      var fieldCode = parseFieldCode(chars);
+      var fieldValue = parseVariableLengthField(chars);
+      handler.accept(fieldCode, fieldValue);
+      if (position < chars.length && chars[position] == delimiter) {
+        position++;
+      }
+    }
+  }
 
   protected Boolean parseBoolean(char[] messageChars) {
     if (position >= messageChars.length) {
@@ -60,7 +99,7 @@ public abstract class Sip2ResponseParser<T> {
     if (position + length > messageChars.length) {
       return null;
     }
-    String value = new String(messageChars, position, length);
+    var value = new String(messageChars, position, length);
     position += length;
     try {
       return Integer.valueOf(value);
@@ -73,7 +112,7 @@ public abstract class Sip2ResponseParser<T> {
     if (position + length > messageChars.length) {
       return null;
     }
-    String value = new String(messageChars, position, length);
+    var value = new String(messageChars, position, length);
     position += length;
     return value;
   }
@@ -82,7 +121,7 @@ public abstract class Sip2ResponseParser<T> {
     if (position + 2 > messageChars.length) {
       return "";
     }
-    String fieldCode = new String(messageChars, position, 2);
+    var fieldCode = new String(messageChars, position, 2);
     position += 2;
     return fieldCode;
   }
@@ -100,28 +139,51 @@ public abstract class Sip2ResponseParser<T> {
       throw new IllegalArgumentException("Invalid date time format, insufficient length");
     }
 
-    String dateTimeStr = new String(messageChars, position, 18);
+    var dateTimeStr = new String(messageChars, position, 18);
     position += 18;
 
-    try {
-      return LocalDateTime.parse(dateTimeStr, DATE_TIME_FORMATTER)
-        .atZone(ZoneId.of(timezone))
-        .toOffsetDateTime();
-    } catch (DateTimeParseException e) {
-      throw new IllegalArgumentException("Invalid date time format", e);
-    }
+    return parseDateTime(dateTimeStr);
   }
 
   protected OffsetDateTime parseDateTime(String dateTimeStr) {
     if (dateTimeStr == null || dateTimeStr.length() != 18) {
       return null;
     }
+
     try {
       return LocalDateTime.parse(dateTimeStr, DATE_TIME_FORMATTER)
-        .atZone(ZoneId.of(timezone))
-        .toOffsetDateTime();
+          .atZone(ZoneId.of(timezone))
+          .toOffsetDateTime();
     } catch (DateTimeParseException e) {
-      return null;
+      throw new IllegalArgumentException("Invalid date time format", e);
     }
+  }
+
+  protected EnumSet<PatronStatus> parsePatronStatuses(char[] messageChars) {
+    var length = 14;
+    if (position + length > messageChars.length) {
+      return EnumSet.noneOf(PatronStatus.class);
+    }
+
+    var statuses = EnumSet.noneOf(PatronStatus.class);
+    var statusValues = PatronStatus.values();
+
+    for (int i = 0; i < length && i < statusValues.length; i++) {
+      if (messageChars[position + i] == 'Y') {
+        statuses.add(statusValues[i]);
+      }
+    }
+
+    position += length;
+    return statuses;
+  }
+
+  protected Language parseLanguage(char[] messageChars) {
+    var langCode = parseString(messageChars, 3);
+    return LanguageMapper.find(langCode).getLanguage();
+  }
+
+  protected static void doNothing() {
+    // Used to ignore unrecognized field codes
   }
 }
